@@ -246,3 +246,51 @@ VALUES \
      ( :series_id \
      , :similar_series_id \
      )
+
+series.add_michel_price = \
+UPDATE series \
+   SET michel_price = :price \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND michel_price IS NULL
+
+series.add_scott_price = \
+UPDATE series \
+   SET scott_price = :price \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND scott_price IS NULL
+
+series.add_yvert_price = \
+UPDATE series \
+   SET yvert_price = :price \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND yvert_price IS NULL
+
+series.add_gibbons_price = \
+UPDATE series \
+   SET gibbons_price = :price \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND gibbons_price IS NULL
+
+series.add_solovyov_price = \
+UPDATE series \
+   SET solovyov_price = :price \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND solovyov_price IS NULL
+
+series.add_zagorski_price = \
+UPDATE series \
+   SET zagorski_price = :price \
+     , updated_at = :updated_at \
+     , updated_by = :updated_by \
+ WHERE id = :series_id \
+   AND zagorski_price IS NULL
